--- a/web.html
+++ b/web.html
@@ -16,7 +16,7 @@
 			<p>lorem ipsum dolor sit amet</p>
 		</div>
 		<div>
-			<img src="C:\Users\user\Desktop\web\img.jpg" style="width:50%"/>
+			<img src="img.jpg" style="width:50%"/>
 		</div>
 		<div>
 			<form>
